--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   <div class="header-content">
     <h1>Hernán Gustavo Quiroga</h1>
     <h2>Desarrollador VR | Experiencias Inmersivas</h2>
-    <button class="cta-btn">📄 Descargar CV</button>
+    
   </div>
 </header>
 
@@ -338,26 +338,36 @@
   <h3>Perfil Profesional</h3>
   <p>Especialista en desarrollo de experiencias interactivas de Realidad Virtual y Aumentada. Experiencia en aplicaciones educativas, museos, simulaciones y marketing inmersivo, con dominio de Unity, C#, Oculus/Meta Quest, Unreal Engine 5 y diseño de experiencias 3D.</p>
 </section>
-
 <section>
   <h3>Experiencias Destacadas</h3>
   <div class="experience-grid">
+    
     <div class="experience-item">
-      <video autoplay muted loop>
-        <source src="https://youtube.com/shorts/T7nXJQRzOtE" type="video/mp4">
-      </video>
+      <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/T7nXJQRzOtE"
+        title="Museo VR de Energías Renovables"
+        frameborder="0"
+        allowfullscreen>
+      </iframe>
       <h4>Museo VR de Energías Renovables</h4>
       <p>Diseño y desarrollo de experiencia educativa inmersiva para Meta Quest.</p>
     </div>
+
     <div class="experience-item">
-      <video autoplay muted loop>
-        <source src="https://youtu.be/KaM1S5X5Ivk" type="video/mp4">
-      </video>
+      <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/KaM1S5X5Ivk"
+        title="Fuerte Grande VR"
+        frameborder="0"
+        allowfullscreen>
+      </iframe>
       <h4>Fuerte Grande</h4>
       <p>Juego histórico interactivo con narrativa educativa y mecánicas VR.</p>
     </div>
+
   </div>
 </section>
+
+
 
 <section>
   <h3>Habilidades Técnicas</h3>
@@ -414,10 +424,7 @@
 </section>
 <section id="formacion-unreal" class="highlight-section">
   <div class="unreal-container">
-    <!-- Logo flotante de Unreal Engine -->
-    <div class="floating-logo">
-      <img src="./IMAGENES/ChatGPT Image 1 ago 2025, 07_44_28 p.m..png" alt="Unreal Engine 5 Logo">
-    </div>
+   
 
     <!-- Imagen principal del curso -->
     <img src="/IMAGENES/ChatGPT Image 1 ago 2025, 07_41_23 p.m..png" alt="Unreal 5 Image Campus" class="unreal-image">
