--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     <!-- Imagen principal del curso -->
     <img src="/IMAGENES/ChatGPT Image 1 ago 2025, 07_41_23 p.m..png" alt="Unreal 5 Image Campus" class="unreal-image">
 
-    <!-- Texto destacado -->
+    <!-- Texto destacadooo -->
     <div class="unreal-text">
       <h2>Especialización en Realidad Virtual con Unreal Engine 5</h2>
       <p>
