--- a/index.html
+++ b/index.html
@@ -404,20 +404,20 @@
   <h3>Certificados</h3>
   <div class="certificates-grid">
     <div class="certificate-item" onclick="openModal(this)">
-      <img src="./IMAGENES/certificadoUNI.jpg" alt="Certificado UNI - Desarrollo VR">
+      <img src="./IMAGENES/uni.jpg" alt="Certificado UNI - Desarrollo VR">
       <p>UNI (Perú) - Desarrollo VR</p>
     </div>
     <div class="certificate-item" onclick="openModal(this)">
-      <img src="./IMAGENES/DIPLOMATURA DESARROLLO WEB.jpg" alt="Certificado Full Stack UTN">
+      <img src="./IMAGENES/diplo.jpg" alt="Certificado Full Stack UTN">
       <p>Full Stack UTN</p>
     </div>
     <div class="certificate-item" onclick="openModal(this)">
-      <img src="./IMAGENES/Captura de pantalla 2025-08-01 185659.png" alt="Instructor en Formación Profesional">
+      <img src="./IMAGENES/game.png" alt="Instructor en Formación Profesional">
       <p>Curso Game Desing UTN</p>
     </div>
     
     <div class="certificate-item" onclick="openModal(this)">
-      <img src="./IMAGENES/Captura de pantalla 2025-08-01 185315.png" alt="Certificado Tecnología Educativa UTN">
+      <img src="./IMAGENES/exp.png" alt="Certificado Tecnología Educativa UTN">
       <p>Tecnología Educativa - UTN</p>
     </div>
   </div>
@@ -427,7 +427,7 @@
    
 
     <!-- Imagen principal del curso -->
-    <img src="/IMAGENES/ChatGPT Image 1 ago 2025, 07_41_23 p.m..png" alt="Unreal 5 Image Campus" class="unreal-image">
+    <img src="/IMAGENES/unreal.png" alt="Unreal 5 Image Campus" class="unreal-image">
 
     <!-- Texto destacadooo -->
     <div class="unreal-text">
